# OffsideDetection

./: .gitmodules  CMakeLists.txt
Inc/: ObjectDetection.h  edgeDetection.h
Src/: Histogram.cpp  Histogram.h  ObjectDetection.cpp  README.md  edgeDetection.cpp  offside.cpp
